--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,7 +1,8 @@
 name: build sample
-on: [push]
-  branches:
-      -master
+on: 
+  push:
+      branches:
+        -master
 jobs:
   build:
     runs on: ubuntu-latest
